i clean my project

--- a/templates/customadmin/offermanagement.html
+++ b/templates/customadmin/offermanagement.html
@@ -201,7 +201,7 @@ background-color: #495057; /* Slightly lighter background on hover */
 
                         </div>
                         <div class="form-group">
-                            <label for="cashDate">Cash Date:</label>
+                            <label for="cashDate">Date:</label>
                             <input type="date" class="form-control" id="cashDate" name="cashDate" required>
                         </div>
                         <div class="form-group">
@@ -246,7 +246,7 @@ background-color: #495057; /* Slightly lighter background on hover */
                             <input type="text" class="form-control" id="edit-discount" name="discount" placeholder="e.g., 10%" required>
                         </div>
                         <div class="form-group">
-                            <label for="cashDate">Cash Date:</label>
+                            <label for="cashDate">Date:</label>
                             <input type="date" class="form-control" id="edit-cashDate" name="cashDate" required>
                         </div>
                         <div class="form-group">
