--- a/templates/userside/checkout.html
+++ b/templates/userside/checkout.html
@@ -299,7 +299,7 @@
           <div class="container">
             <div class="header-left">
               <div class="header-dropdown">
-                <a href="#">Usd</a>
+                {% comment %} <a href="#">Usd</a> {% endcomment %}
                 <div class="header-menu">
                   <ul>
                     <li><a href="#">Eur</a></li>
@@ -311,7 +311,7 @@
               <!-- End .header-dropdown -->
 
               <div class="header-dropdown">
-                <a href="#">Eng</a>
+                {% comment %} <a href="#">Eng</a> {% endcomment %}
                 <div class="header-menu">
                   <ul>
                     <li><a href="#">English</a></li>
@@ -372,7 +372,7 @@
                       >Home</a
                     >
 
-                    <div class="megamenu demo">
+                    {% comment %} <div class="megamenu demo">
                       <div class="menu-col">
                         <div class="menu-title">Choose your demo</div>
                         <!-- End .menu-title -->
@@ -723,7 +723,7 @@
                         <!-- End .text-center -->
                       </div>
                       <!-- End .menu-col -->
-                    </div>
+                    </div> {% endcomment %}
                     <!-- End .megamenu -->
                   </li>
                   <li>
@@ -731,7 +731,7 @@
                       >Shop</a
                     >
 
-                    <div class="megamenu megamenu-md">
+                    {% comment %} <div class="megamenu megamenu-md">
                       <div class="row no-gutters">
                         <div class="col-md-8">
                           <div class="menu-col">
@@ -855,7 +855,7 @@
                         <!-- End .col-md-4 -->
                       </div>
                       <!-- End .row -->
-                    </div>
+                    </div> {% endcomment %}
                     <!-- End .megamenu megamenu-md -->
                   </li>
                 </ul>
@@ -945,7 +945,7 @@
                   data-display="static"
                 >
                   <i class="icon-shopping-cart"></i>
-                  <span class="cart-count">2</span>
+                  {% comment %} <span class="cart-count">2</span> {% endcomment %}
                 </a>
 
                 <div class="dropdown-menu dropdown-menu-right">
