--- a/templates/userside/shop.html
+++ b/templates/userside/shop.html
@@ -165,7 +165,7 @@
                                 <li class="megamenu-container active">
                                     <a href="{% url 'logintohome:homee' %}" class="sf-with-ul">Home</a>
 
-                                    <div class="megamenu demo">
+                                    {% comment %} <div class="megamenu demo">
                                         <div class="menu-col">
                                             <div class="menu-title">Choose your demo</div><!-- End .menu-title -->
 
@@ -344,12 +344,12 @@
                                                 <a href="#" class="btn btn-outline-primary-2 view-all-demos"><span>View All Demos</span><i class="icon-long-arrow-right"></i></a>
                                             </div><!-- End .text-center -->
                                         </div><!-- End .menu-col -->
-                                    </div><!-- End .megamenu -->
+                                    </div><!-- End .megamenu --> {% endcomment %}
                                 </li>
                                 <li>
                                     <a href="{% url 'logintohome:shop' %}" class="sf-with-ul">Shop</a>
 
-                                    <div class="megamenu megamenu-md">
+                                    {% comment %} <div class="megamenu megamenu-md">
                                         <div class="row no-gutters">
                                             <div class="col-md-8">
                                                 <div class="menu-col">
@@ -402,7 +402,7 @@
                                                 </div><!-- End .banner banner-overlay -->
                                             </div><!-- End .col-md-4 -->
                                         </div><!-- End .row -->
-                                    </div><!-- End .megamenu megamenu-md -->
+                                    </div><!-- End .megamenu megamenu-md --> {% endcomment %}
                                 </li>
                               
                               
@@ -447,12 +447,12 @@
                         <div class="dropdown cart-dropdown">
                             <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
                                 <i class="icon-shopping-cart"></i>
-                                <span class="cart-count">2</span>
+                                {% comment %} <span class="cart-count">2</span> {% endcomment %}
                             </a>
 
                             <div class="dropdown-menu dropdown-menu-right">
                                 <div class="dropdown-cart-products">
-                                  <div class="product">
+                                  {% comment %} <div class="product">
                                         <div class="product-cart-details"> 
                                            <h4 class="product-title">
                                                 <a href="product.html">Beige knitted elastic runner shoes</a>
@@ -465,9 +465,9 @@
                                         </div><!-- End .product-cart-details -->
 
                                         <figure class="product-image-container">
-                                            {% comment %} <a href="product.html" class="product-image">
+                                            <a href="product.html" class="product-image">
                                                 <img src="static/images/products/cart/product-1.jpg" alt="product">
-                                            </a> {% endcomment %}
+                                            </a> 
                                         </figure>
                                         <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
                                     </div><!-- End .product -->
@@ -497,12 +497,12 @@
                                     <span>Total</span>
 
                                     <span class="cart-total-price">$160.00</span>
-                                </div><!-- End .dropdown-cart-total -->
+                                </div><!-- End .dropdown-cart-total --> {% endcomment %}
 
                                 <div class="dropdown-cart-action">
                                     {% if user_eamil %}
                                     <a href="{% url 'newcart:show_cart' %}" class="btn btn-primary">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
+                                    {% comment %} <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a> {% endcomment %}
                             {% else %}
                                 <p>Please Login </p>
                             {% endif %}
@@ -695,7 +695,7 @@
 
                             </div><!-- End .products -->
 
-                			<nav aria-label="Page navigation">
+                			{% comment %} <nav aria-label="Page navigation">
 							    <ul class="pagination justify-content-center">
 							        <li class="page-item disabled">
 							            <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
@@ -712,7 +712,7 @@
 							            </a>
 							        </li>
 							    </ul>
-							</nav>
+							</nav> {% endcomment %}
                 		</div><!-- End .col-lg-9 -->
                 		<aside class="col-lg-3 order-lg-first">
                 			<div class="sidebar sidebar-shop">
@@ -814,13 +814,13 @@
         						</div><!-- End .widget --> {% endcomment %}
 
         						<div class="widget widget-collapsible">
-    								<h3 class="widget-title">
+    								{% comment %} <h3 class="widget-title">
 									    <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
 									        Colour
 									    </a>
-									</h3><!-- End .widget-title -->
+									</h3><!-- End .widget-title --> {% endcomment %}
 
-									<div class="collapse show" id="widget-3">
+									{% comment %} <div class="collapse show" id="widget-3">
 										<div class="widget-body">
 											<div class="filter-colors">
 												<a href="#" style="background: #b87145;"><span class="sr-only">Color Name</span></a>
@@ -834,7 +834,7 @@
 											</div><!-- End .filter-colors -->
 										</div><!-- End .widget-body -->
 									</div><!-- End .collapse -->
-        						</div><!-- End .widget -->
+        						</div><!-- End .widget --> {% endcomment %}
 
         						{% comment %} <div class="widget widget-collapsible">
     								<h3 class="widget-title">
